--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 .prettierignore
+
+screenshot.png
+screenshot2.png
+screenshot3.png
